<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OmxPiRemote</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="playpause">\t\nPlay/Pause\n\t</string>
    <string name="startServer">Start</string>
    <string name="stopServer">Stop</string>
    <string name="urlHint">Url or path to target</string>
    <string name="seekLeftSmall">Seek -30</string>
    <string name="seekLeftBig">Seek -600</string>
    <string name="seekRightSmall">Seek +30</string>
    <string name="seekRightBig">Seek +600</string>
    <string name="volumeDown">Volume Down</string>
    <string name="volumeUp">Volume Up</string>
    <string name="seekLeft">Seek Left</string>
    <string name="seekRight">Seek Right</string>
    <string name="fileLabel">File: </string>
    <string name="settings_done">Done</string>
    <string name="settings_url">Url:</string>
    <string name="settings_user">Username:</string>
    <string name="settings_password">Password:</string>
    <string name="settings_urlHint">ex: 192.168.1.3</string>
    <string name="settings_userHint">ex: mike</string>
    <string name="fileList">List Files</string>
    <string name="settings_pathLabel">Path to folder: (For File Listing)</string>
    <string name="settingsPathHint">ex: ~/ or /media/sda1</string>
    <string name="settings_audio">Audio Device</string>
    <string name="settings_audioHdmi">HDMI</string>
    <string name="settings_audio_local">Local</string>
    <string name="settings_video">Video Device</string>

</resources>